# Operator-platform

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_company_persistence.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/application/: __init__.py  company_orchestrator.py  company_service.py  execution_service.py  mission_service.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/demo/: __init__.py  autonomous_company_demo.py
backend/app/domain/: __init__.py  assignment.py  blueprint.py  ceo.py  company.py  decision.py  department.py  employee.py  execution_strategy.py  memory.py  mission.py  pipeline.py  plan.py  planner.py  runtime.py  task.py  workflow.py
backend/app/mappers/: __init__.py  company_presenter.py  idea_mapper.py
backend/app/models/: __init__.py  company_persistence.py
backend/app/providers/: __init__.py  base.py  registry.py  types.py
backend/app/repositories/: __init__.py  company_repository.py  memory_company_repository.py  sqlalchemy_company_repository.py
backend/app/schemas/: __init__.py  company.py
backend/app/stores/: __init__.py  company_session.py  memory_company_store.py
backend/tests/: test_app.py
backend/tests/api/: test_companies_api.py
backend/tests/application/: test_application_services.py
backend/tests/demo/: test_autonomous_company_demo.py
backend/tests/domain/: test_blueprint.py  test_ceo.py  test_memory.py  (+7 more)
(+84 files in other folders)
